# TeleGestic

./: README.md
handpose_det/: CMakeLists.txt  README.md  README_old_ver.md  package.xml
handpose_det/launch/: hand_det_6d_pose.launch
handpose_det/scripts/: filter.py  handpose_det.py  handpose_det_new_ik.py  test_arm.py
handpose_det/src/: handpose_det.cpp
piper_kinematics/: CMakeLists.txt
piper_kinematics/scripts/: interactive_pose_marker.py
realsense-ros/realsense2_camera/launch/: test_rtab.launch
ros_astra_camera/launch/: dabai_dc1.launch  gemini.launch  gemini_a.launch
ros_astra_camera/scripts/: depth2pointcloud.py
